cmake_minimum_required(VERSION 3.23)
project(secondClass)
set(CMAKE_CXX_STANDARD 14)
add_executable(secondClass main.cpp)


project(secondClass)
set(CMAKE_CXX_STANDARD 14)
add_executable(input input.cpp)

project(secondClass)
set(CMAKE_CXX_STANDARD 14)
add_executable(multiple_input multiple_input.cpp)