cmake_minimum_required(VERSION 3.23)
project(secondClass)
set(CMAKE_CXX_STANDARD 14)
add_executable(secondClass main.cpp)


project(secondClass)
set(CMAKE_CXX_STANDARD 14)
add_executable(input input.cpp)

project(secondClass)
set(CMAKE_CXX_STANDARD 14)
add_executable(multiple_input multiple_input.cpp)


project(if_else_example)
set(CMAKE_CXX_STANDARD 14)
add_executable(if_else_example if_else_example.cpp)


project(else_if_example)
set(CMAKE_CXX_STANDARD 14)
add_executable(else_if_example else_if_example.cpp)


project(switch)
set(CMAKE_CXX_STANDARD 14)
add_executable(switch switch.cpp)


project(for_tabelline)
set(CMAKE_CXX_STANDARD 14)
add_executable(for_tabelline for_tabelline.cpp)


project(for_decremento)
set(CMAKE_CXX_STANDARD 14)
add_executable(for_decremento for_decremento.cpp)